--- a/src/Components/pages/styles/cart.css
+++ b/src/Components/pages/styles/cart.css
@@ -108,10 +108,12 @@
   }
   .total h3{
     display: flex;
+    margin-left:-140px;
   }  
   .total hr{
     height:2px;
-    width:900px;
+    width:1180px;
+    margin-left:-140px;
     background-color: #000000;
     border:1px solid black
   }
@@ -126,7 +128,47 @@
     box-shadow: 0px 0px 10px 0px rgb(180, 174, 174);
     transition: 0.3s ease;
     margin-top: 2%;
+    margin-left:-140px;
   }
   .total button:hover{
     background-color: rgb(2, 72, 8);
+  }
+  .quantity button{
+padding:0px 8px;
+margin-right:10px;
+margin-left:10px;
+margin-top:15px;
+font-weight: 600;
+font-size:20px;
+cursor: pointer;
+color:white
+  } 
+  .quantity span{
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .quantity .increase{
+    background-color: green;
+    border: none;
+  }
+  .quantity .decrease{
+    background-color: red;
+    border:none;
+  }
+  .qr-popup{
+    position: absolute;
+    margin-top:-50%;
+    margin-left:30%;
+    text-align: center;
+    transform: scale(0.1);
+    visibility: hidden;
+    transition: all 0.4s ease;
+  }
+  .qr-popup img{
+    height:50vh;
+  }
+  .openQrPopup{
+    visibility: visible;
+    transform: scale(1);
+    margin-top:-30%;
   }
